examples/modules/expected/1621-modules-impl-needs-protocol-in-scope.stderr
error: unknown protocol 'Into' in impl — not declared or imported in this module
  --> examples/modules/1621-modules-impl-needs-protocol-in-scope/dead_impl.sx:9:1
   |
 9 | impl Into(*DeadBox) for string {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     convert :: (self: string) -> *DeadBox { return @g_dead; }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 | }
   | ^
